fix: style logo
The size of the logo was too big and I worked on it to make it look nicer.

--- a/index files/v1/style.css
+++ b/index files/v1/style.css
@@ -3,13 +3,20 @@ body {
     background-color: rgb(247,215,35);
 
     div#logo {
-        margin: 10% auto;
+        margin: 3% auto;
         display: flex;
         justify-content: center;
         
-        img {
-            width: 100px;
-            height: 100px;
+        div {
+            transition: 1s all;
+    
+            img {
+                width: 50px;
+                height: 50px;
+            }
+            &:hover {
+                transform: rotate(1turn) scale(2);
+            }
         }
     }
 
